--- a/src/main/webapp/pages/credit/reportmanager/reporttemp_add.html
+++ b/src/main/webapp/pages/credit/reportmanager/reporttemp_add.html
@@ -50,7 +50,7 @@ include("/pages/template/head.html"){} %>
 				html+='</select>'
 				html+='<input  value= "" type="hidden" name="attr.temp_name" />'
 				html+='<input  value= "999" type="hidden" name="attr.parent_temp" />'
-				html+='<input  value= "0" type="hidden" name="attr.node_type" />'
+				html+='<input  value= "0" type="hidden" name="attr.node_level" />'
 				html+='</td>'
 				$(".add1").html(html)
 				$(".add2").html("")
@@ -66,7 +66,7 @@ include("/pages/template/head.html"){} %>
 				html2+='<td>'
 				html2+='<input class="form-control" id="parent" type="text" name="attr.temp_name" value=""  />'
 				html2+='<input   type="hidden" name="attr.parent_temp" />'
-				html2+='<input  value= "1" type="hidden" name="attr.node_type" />'
+				html2+='<input  value= "1" type="hidden" name="attr.node_level" />'
 				html2+='</td>'
 				$(".add1").html(html)
 				$(".add2").html(html2)
@@ -87,7 +87,7 @@ include("/pages/template/head.html"){} %>
 				html3+='<td style="text-align: right;">模板名称</td>'
 				html3+='<td>'
 				html3+='<input id="child" class="form-control" type="text" name="attr.temp_name"value="${model.temp_name}"  />'
-				html3+='<input  value= "2" type="hidden" name="attr.node_type" />'
+				html3+='<input  value= "2" type="hidden" name="attr.node_level" />'
 				html3+='</td>'
 				html3+='<td style="text-align: right;">字段类型</td>'
 				html3+='<td>'
@@ -126,7 +126,7 @@ include("/pages/template/head.html"){} %>
 	<table class="table">
 		<% // 列表头部%>
 		
-		<%if(model1.node_type=='0'){%>
+		<%if(model1.node_level=='0'){%>
 			<tr>
 				<td style="text-align: right;">报告类型</td>
 				<td>
@@ -136,17 +136,17 @@ include("/pages/template/head.html"){} %>
 					</select>
 					<input  value= '${model1.temp_name}' type="hidden" name="attr.temp_name" />
 					<input  value= '${model1.parent_temp}' type="hidden" name="attr.parent_temp" />
-					<input  value= '${model1.node_type}' type="hidden" name="attr.node_type" />
+					<input  value= '${model1.node_level}' type="hidden" name="attr.node_level" />
 				</td>
 			</tr>
-		<%}else if(model1.node_type=='1' || model1.node_type=='2'){%>
+		<%}else if(model1.node_level=='1' || model1.node_level=='2'){%>
 			<tr>
 				<td style="text-align: right;">模板名称</td>
 				<td>
 					<input class="form-control" type="text" name="attr.temp_name"
 				value="" valid='vtext' validname='模板名称' />
 					<input  value= '${model1.parent_temp}' type="hidden" name="attr.parent_temp" />
-					<input  value= '${model1.node_type}' type="hidden" name="attr.node_type" />
+					<input  value= '${model1.node_level}' type="hidden" name="attr.node_level" />
 					<input  value= '${model1.report_type}' type="hidden" name="attr.report_type" />
 				</td>
 			</tr>
