--- a/src/main/webapp/pages/credit/reportmanager/reporttemp_edit.html
+++ b/src/main/webapp/pages/credit/reportmanager/reporttemp_edit.html
@@ -56,7 +56,7 @@ $(function(){
 	<table class="table">
 		<% // 列表头部%>
 		
-		<%if(model.node_type=='0'){%>
+		<%if(model.node_leve=='0'){%>
 			<tr>
 				<td style="text-align: right;">报告类型</td>
 				<td>
@@ -72,10 +72,10 @@ $(function(){
 				</td>
 				<input  value= '${model.temp_name}' type="hidden" name="attr.temp_name" />
 				<input  value= '${model.parent_temp}' type="hidden" name="attr.parent_temp" />
-				<input  value= '${model.node_type}' type="hidden" name="attr.node_type" />
+				<input  value= '${model.node_leve}' type="hidden" name="attr.node_leve" />
 				<input  value= '${model.id}' type="hidden" name="attr.id" />	
 			</tr>
-		<%}else if(model.node_type=='1'){%>
+		<%}else if(model.node_leve=='1'){%>
 			<tr>
 				<td style="text-align: right;">报告类型</td>
 				<td>
@@ -96,7 +96,7 @@ $(function(){
 				value="${model.temp_name_en}"  />									
 				</td>
 				<input  value= '${model.parent_temp}' type="hidden" name="attr.parent_temp" />
-				<input  value= '${model.node_type}' type="hidden" name="attr.node_type" />
+				<input  value= '${model.node_leve}' type="hidden" name="attr.node_leve" />
 				<input  value= '${model.id}' type="hidden" name="attr.id" />
 			</tr>
 		<%}else{%>	
@@ -142,7 +142,7 @@ $(function(){
 				<input class="form-control" type="text" name="attr.length"
 				value="${model.length}" valid='vtext' validname='字段长度' />
 				</td>
-				<input  value= '${model.node_type}' type="hidden" name="attr.node_type" />
+				<input  value= '${model.node_leve}' type="hidden" name="attr.node_leve" />
 				<input  value= '${model.id}' type="hidden" name="attr.id" />
 			</tr>
 		<%}%>	
