代理分配时获取代理价格，批量导入模板国家英文名识别

--- a/src/main/webapp/pages/credit/usercenter/report_pages/report_order_filing.html
+++ b/src/main/webapp/pages/credit/usercenter/report_pages/report_order_filing.html
@@ -308,6 +308,7 @@
                                     <span id="companyZHNames2">**</span>
                                 </div>
                                  <input type="hidden" name="orderId" id="orderId2">
+                                 <input type="hidden" name="companyId2" id="companyId2">
                             </div>
                     </div>
                         <div class="file-upload">
