--- a/src/main/webapp/pages/credit/usercenter/report_pages/report_config.html
+++ b/src/main/webapp/pages/credit/usercenter/report_pages/report_config.html
@@ -9,14 +9,14 @@
 <body>
 <div id="container" class="row animated fadeIn">
     <div class="main">
-        <div class="main-header">
+        <div class="main-header order-info">
 			   <!-- 面包屑 -->
-                    <nav aria-label="breadcrumb">
-                        <ol class="breadcrumb">
-                            <li class="breadcrumb-item"><a href="javascript:;" id="infoImport">报告录入</a></li>
-                            <li class="breadcrumb-item active" aria-current="page">填报</li>
-                        </ol>
-                    </nav>
+                 <nav aria-label="breadcrumb">
+                    <ol class="breadcrumb">
+                        <li class="breadcrumb-item"><a href="javascript:;" id="infoImport">报告录入</a></li>
+                        <li class="breadcrumb-item active" aria-current="page">填报</li>
+                    </ol>
+                 </nav>
                     	
                     <div class="order-box">
                       
