--- a/src/main/webapp/pages/credit/pricemanager/price_add.html
+++ b/src/main/webapp/pages/credit/pricemanager/price_add.html
@@ -4,7 +4,7 @@
 <% var usabled = tempDict.getSysDictDetailString('usabled',model.usabled !); %>
 <% var reportType = reportType.getReportTypeString(model.report_type!); %>
 <% var country = country.getCountryString(); %>
-
+<% var currency = tempDict.getSysDictDetailString('currency',model.currency!); %>
 <% 
 DIRECTIVE SAFE_OUTPUT_OPEN;
 var headContent = {
@@ -202,7 +202,7 @@ var bodyContent = {
 	<tr class="old others othersonly">
 		<td>报告速度</td>
 			<td>
-			  <select name="model.order_speed" class="form-control" style="width: 200px;">
+			  <select name="order_speed" class="form-control" style="width: 200px;">
 					${orderspeed!}
 				</select>
 			</td>
@@ -210,7 +210,7 @@ var bodyContent = {
 	<tr class="old others othersonly">
 		<td>报告类型</td>
 			 <td> 
-				 <select name="model.report_type" class="form-control" style="width: 200px;">
+				 <select name="report_type" class="form-control" style="width: 200px;">
 							${reportType!}
 				</select> 
 			</td>
@@ -253,10 +253,13 @@ var bodyContent = {
 			<td><input type="text" name="model.price" class="form-control" valid='vnum_y' 
 				value="${model.price!}"/></td>
 		</tr  class="new">
-		<tr  >
+		<tr>
 			<td>币种</td>
-			<td><input type="text" name="model.currency" class="form-control" 
-				value="${model.currency!}"/></td>
+			<td>
+				<select type="text" name="model.currency" class="form-control" >
+					${currency!}
+				</select>
+			</td>
 		</tr>
 		<tr >
 			<td>是否禁用</td>
