改了好多东西

--- a/src/main/webapp/pages/credit/usercenter/report_pages/report_info_import.html
+++ b/src/main/webapp/pages/credit/usercenter/report_pages/report_info_import.html
@@ -218,7 +218,7 @@
                     <div class="row mt-3 mb-2">
                         <div class="input-group col-md-6 align-items-top">
                             <label class="control-label" id="firmChineseName">公司中文名称：</label>
-                            <input type="text" id="companyZHName" class="form-control">
+                            <input type="text" id="companyZHNames" class="form-control">
                            
                         </div>
                     </div>
