--- a/src/main/webapp/pages/credit/usercenter/order_manage/order_allocation.html
+++ b/src/main/webapp/pages/credit/usercenter/order_manage/order_allocation.html
@@ -38,7 +38,15 @@
                                <form id="formSearch" class="form-inline" role="form">
                                    <div class="input-group col-md-3 d-flex justify-content-center table-search-input">
                                        <label class="control-label" for="txt_search_reporter">报告员：</label>
-                                       <input type="text" class="form-control search-input" id="txt_search_reporter" placeholder="请输入报告员">
+                                       <input type="text" class="form-control search-input" id="txt_search_reporter" placeholder="">
+                                   </div>
+                                    <div class="input-group col-md-3 d-flex justify-content-center table-search-input">
+                                       <label class="control-label" for="txt_search_orderNum">订单号：</label>
+                                       <input type="text" class="form-control search-input" id="txt_search_orderNum" placeholder="">
+                                   </div>
+                                    <div class="input-group col-md-3 d-flex justify-content-center table-search-input">
+                                       <label class="control-label" for="txt_search_firmName">订单公司名称：</label>
+                                       <input type="text" class="form-control search-input" id="txt_search_firmName" placeholder="">
                                    </div>
                                    <div class="right-btn btn-group d-flex align-items-center justify-content-center col-md-3">
                                        <button type="button" id="btn_query" class="btn btn-primary mr-3">查询</button>
