--- a/src/main/webapp/pages/credit/usercenter/order_manage/order_verify.html
+++ b/src/main/webapp/pages/credit/usercenter/order_manage/order_verify.html
@@ -362,7 +362,7 @@
                 </div>
             </div>
             <div class="modal-footer">
-                <button type="button" class="btn btn-primary" id="modal_cancel" >提交</button>
+                <button type="button" class="btn btn-primary" id="modal_cancel" >确认撤销</button>
             </div>
         </div>
     </div>
