国外订单代理自动分配

--- a/src/main/webapp/pages/credit/agentmanager/agent_priceedit.html
+++ b/src/main/webapp/pages/credit/agentmanager/agent_priceedit.html
@@ -1,7 +1,7 @@
 <% var usabled = tempDict.getSysDictDetailString2('usabled',model.usabled ); %>
 <% var currency = tempDict.getSysDictDetailString2('currency',model.currency ); %>
 <% var agenttype = tempDict.getSysDictDetailString2('agenttype',model.agent_type ); %>
-<% var speed = tempDict.getSysDictDetailString2('agentspeed',model.speed ); %>
+<% var speed = tempDict.getSysDictDetailString2('orderspeed',model.speed ); %>
 <% var agent_category = tempDict.getSysDictDetailString2('agentcategory',model.agent_category ); %>
 <% var country = country.getCountryString(); %>
 <% 
