--- a/src/main/webapp/pages/credit/usercenter/order_manage/order_filing.html
+++ b/src/main/webapp/pages/credit/usercenter/order_manage/order_filing.html
@@ -309,6 +309,8 @@
                                     <span id="companyZHNames2">**</span>
                                 </div>
                                  <input type="hidden" name="orderId" id="orderId2">
+                                 <input type="hidden" name="speedid" id="speedid">
+                                 <input type="hidden" name="countryid" id="countryid">
                             </div>
                     </div>
                         <div>
