谁删除了逗号？

--- a/src/main/webapp/pages/credit/usercenter/order_manage/create_order.html
+++ b/src/main/webapp/pages/credit/usercenter/order_manage/create_order.html
@@ -342,7 +342,7 @@
     	console.log(value5);
    	 	var html="";
 	   	 $.ajax({
-		        url:"/admin/ordermanager/getTime"
+		        url:"/admin/ordermanager/getTime",
 		        data:{
 		        	"countrytype":value1,
 		        	"speed":value2,
