--- a/src/main/webapp/pages/credit/usercenter/order_manage/create_order.html
+++ b/src/main/webapp/pages/credit/usercenter/order_manage/create_order.html
@@ -348,7 +348,7 @@
 		        	"speed":value2,
 		        	"reporttype":value3,
 		        	"ordertype":value4,
-		        	"receivedate":value5,
+		        	"receivedate":encodeURI(value5),
 		        },	
 		        type:"get",
 		        dataType:"json",
