--- a/src/main/webapp/pages/credit/usercenter/all_orders.html
+++ b/src/main/webapp/pages/credit/usercenter/all_orders.html
@@ -8,16 +8,15 @@
     <title>联信</title>
     <meta name="viewport" content="width=device-width, initial-scale=1,maximum-scale=1, user-scalable=no">
     <meta name="renderer" content="webkit">
-    <link rel="stylesheet" href="${BASE_PATH }static/credit/css/index.css">
-    <link rel="stylesheet" href="${BASE_PATH }static/credit/css/order_manage/order_verify.css">
-    <link rel="stylesheet" href="${BASE_PATH }static/credit/css/order_manage/order_submit.css">
+    <link rel="stylesheet" href="${BASE_PATH }static/credit/assets/layui/css/layui.css">
+      <link rel="stylesheet" href="${BASE_PATH }static/credit/css/reset.css">
+    <link rel="stylesheet" href="${BASE_PATH }static/credit/css/common.css">
+   <link rel="stylesheet" href="${BASE_PATH }static/credit/css/index.css">
     <style>
     	#table tbody tr td:first-child {
     		color:var(--fontColor)!important;
     	}
-    	.fixed-table-body-columns .table tr {
-    		height:48.4px!important;
-    	}
+    	
     </style>
     <script type="text/javascript">
 	    var BASE_PATH = "${BASE_PATH }";
