--- a/src/main/webapp/pages/credit/usercenter/total_manage/report_credit_analysis.html
+++ b/src/main/webapp/pages/credit/usercenter/total_manage/report_credit_analysis.html
@@ -6,7 +6,7 @@
     <title>联信</title>
     <meta name="viewport" content="width=device-width, initial-scale=1,maximum-scale=1, user-scalable=no">
     <meta name="renderer" content="webkit">
-    <link rel="stylesheet" href="../css/order_manage/order_common.css">
+    <link rel="stylesheet" href="${BASE_PATH }static/credit/css/order_manage/order_common.css">
     <link rel="stylesheet" href="${BASE_PATH }static/credit/css/report_css/report_business_info.css">
     <style>
         .control-label {
