为防止没有获取报告价格时遭到拦截，后台人为强行放值，上线是还原

--- a/src/main/webapp/pages/credit/currencyrate/currencyrate_list.html
+++ b/src/main/webapp/pages/credit/currencyrate/currencyrate_list.html
@@ -9,8 +9,8 @@
 	jQuery(function($) {
 		// 页面方法
 		oper = {
-			width : 800,
-			height : 500,
+			width : 600,
+			height : 250,
 			form : document.form1,
 			list : function() {
 				var url = 'credit/currencyrate/list';
@@ -18,7 +18,7 @@
 				this.form.submit();
 			},
 			add : function() {
-				var url = 'credit/custom/add';
+				var url = 'credit/currencyrate/add';
 				var title = '新增';
 				Iframe(url, this.width, this.height, title);
 			},
