--- a/src/main/webapp/pages/credit/currencyrate/currencyrate_edit.html
+++ b/src/main/webapp/pages/credit/currencyrate/currencyrate_edit.html
@@ -14,7 +14,7 @@ var headContent = {
 				return false;
 			}
 			id = id || '0';
-			var url = 'credit/custom/save/'+id;
+			var url = 'credit/currencyrate/save/'+id;
 			form1.action = url;
 			form1.submit();
 			return true;
