--- a/src/main/webapp/pages/credit/usercenter/order_manage/create_order.html
+++ b/src/main/webapp/pages/credit/usercenter/order_manage/create_order.html
@@ -384,6 +384,7 @@
 		        type:"post",
 		        dataType:"json",
 		        success: function(data) {
+		        	console.log(data)
 		        	  if(data!=null){
 		        		  $("#priceid").val(data.id)
 		        	  }
