--- a/src/main/webapp/pages/credit/usercenter/total_manage/report_credit_analysis.html
+++ b/src/main/webapp/pages/credit/usercenter/total_manage/report_credit_analysis.html
@@ -35,6 +35,11 @@
             font-size: 1.5rem;
             color: var(--blue);
         }
+         .form-inline{
+            justify-content: space-between;
+            padding-left: 1rem;
+            padding-right: 2rem;
+        }
 
     </style>
 </head>
@@ -57,20 +62,24 @@
             <div class="bg-f">
                 <div class="form-box">
                     <form id="formSearch" class="form-inline" role="form">
-                        <div class="input-group col-md-2 d-flex justify-content-center table-search-input">
+                        <div class="input-group col-md-4 d-flex justify-content-center table-search-input">
                             <label class="control-label" for="txt_search_reporter">名称：</label>
                             <select class="form-control"  id="txt_search_reporter" name="attr.name">
                                 <option value="" >请选择名称</option>
                             </select>
                             <!--<input type="text" class="form-control search-input" id="txt_search_reporter" placeholder="请输入报告员">-->
                         </div>
-                        <div class="input-group mt-0 col-md-3 pl-0 pr-5">
-                            <label class="control-label col-md-3 px-0" for="time">时间：</label>
-                            <input type="text" autocomplete="false" class="layui-input search-input col-md-8" id="time" placeholder="请选择日期范围">
+                        <div class="input-group mt-0 col-md-4 pl-0">
+                            <label class="control-label  px-0" for="time">时间：</label>
+                            <input type="text" autocomplete="false" class="layui-input search-input" id="time" placeholder="请选择日期范围">
                         </div>
-                        <div class="right-btn btn-group d-flex align-items-center justify-content-center col-md-1">
-                            <button type="button" id="btn_query" class="btn btn-primary mr-3">查询</button>
-                            <!--<button type="button" id="btn_reset" class="btn btn-light">重置</button>-->
+                         <div class="btn-row d-flex justify-content-between mt-3 mb-3 ml-4">
+                            <div class="right-btn btn-group d-flex align-items-center justify-content-around">
+                                <button type="button" id="btn_query" class="btn btn-primary mr-3">查询</button>
+                                <button type="button" id="btn_reset" class="btn btn-light mr-3">重置</button>
+                                <button type="button" id="btn_export" class="btn btn-primary px-3"><img
+                                        src="../imgs/total_manage/export.png" style="width: 1rem;height: 1.2rem;display: inline-block;padding-bottom: 0.25rem;"/>导出</button>
+                            </div>
                         </div>
                     </form>
                 </div>
