订单结算页面90%

--- a/src/main/webapp/pages/credit/usercenter/total_manage/total_settle.html
+++ b/src/main/webapp/pages/credit/usercenter/total_manage/total_settle.html
@@ -86,7 +86,7 @@
                     <div class="btn-row d-flex justify-content-between mt-3 mb-3 fr">
                         <div class="right-btn btn-group d-flex align-items-center justify-content-around" style="padding-right: 6.25rem">
                             <button type="button" id="btn_query" class="btn btn-primary mr-3">查询</button>
-                            <button type="button" id="btn_reset" class="btn btn-light mr-3">重置</button>
+                            <button type="button" id="btn_resett" class="btn btn-light mr-3">重置</button>
                             <button type="button" id="btn_export" class="btn btn-primary px-3"><img
                                     src="${BASE_PATH }static/credit/imgs/total_manage/export.png" style="width: 1rem;height: 1.2rem;display: inline-block;padding-bottom: 0.25rem;" class="mr-2"/>导出</button>
                         </div>
