--- a/src/main/webapp/pages/credit/usercenter/report_pages/report_config.html
+++ b/src/main/webapp/pages/credit/usercenter/report_pages/report_config.html
@@ -5,6 +5,7 @@
     <title>reported</title>
      <link rel="stylesheet" href="${BASE_PATH }static/credit/css/order_manage/order_common.css">
     <link rel="stylesheet" href="${BASE_PATH }static/credit/css/report_css/reported_basic_info.css">
+    <link rel="stylesheet" href="${BASE_PATH }static/credit/css/report_css/report_business_info.css">
 </head>
 
 <div id="container" class="row animated fadeIn">
