--- a/src/main/webapp/pages/credit/usercenter/report_pages/report_config.html
+++ b/src/main/webapp/pages/credit/usercenter/report_pages/report_config.html
@@ -6,6 +6,12 @@
      <link rel="stylesheet" href="${BASE_PATH }static/credit/css/order_manage/order_common.css">
     <link rel="stylesheet" href="${BASE_PATH }static/credit/css/report_css/reported_basic_info.css">
     <link rel="stylesheet" href="${BASE_PATH }static/credit/css/report_css/report_business_info.css">
+    <style>
+    	.abc:after{
+    		content: '';
+    		width: 22%;
+ 		}
+    </style>
 </head>
 
 <div id="container" class="row animated fadeIn">
